# mn-agents

./: AGENTS.md  README.md  SPEC.md  index.json  pytest.ini  requirements-test.txt
control_approval_gate/: README.md  agent.json  input.spec.json  output.spec.json
control_checkpoint/: README.md  agent.json  input.spec.json  output.spec.json
control_input_listener/: README.md  agent.json  input.spec.json  output.spec.json
control_join/: README.md  agent.json  input.spec.json  output.spec.json
control_lifecycle/: README.md  agent.json  input.spec.json  output.spec.json
control_message_filter/: README.md  agent.json  input.spec.json  output.spec.json
control_message_router/: README.md  agent.json
control_message_router_agent/: README.md  SPEC.md  pyproject.toml
control_message_router_agent/fixtures/: rendered.node.json
control_message_router_agent/src/mn_control_message_router_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
control_message_router_agent/src/mn_control_message_router_agent/resources/: output.spec.json
control_output_fanout/: README.md  agent.json  input.spec.json  output.spec.json
control_retry/: README.md  agent.json  input.spec.json  output.spec.json
control_router/: README.md  agent.json  input.spec.json  output.spec.json
control_terminal_sink_agent/: README.md  SPEC.md  pyproject.toml
control_terminal_sink_agent/src/mn_control_terminal_sink_agent/: definition.py
control_terminal_sink_agent/src/mn_control_terminal_sink_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
control_terminal_sink_agent/src/mn_control_terminal_sink_agent/resources/: input.spec.json
llm_agent/: README.md  (+3 more)
module_beam_module_agent/: README.md  SPEC.md  pyproject.toml
module_beam_module_agent/src/mn_module_beam_module_agent/: __init__.py  definition.py
module_beam_module_agent/src/mn_module_beam_module_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
prototype_actor_review_agent/: README.md  SPEC.md  pyproject.toml
prototype_actor_review_agent/src/mn_prototype_actor_review_agent/: __init__.py
prototype_actor_review_agent/src/mn_prototype_actor_review_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
prototype_actor_review_agent/src/mn_prototype_actor_review_agent/resources/: output.spec.json
prototype_artifact_finalizer_agent/: README.md  SPEC.md  pyproject.toml
prototype_artifact_finalizer_agent/src/mn_prototype_artifact_finalizer_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
prototype_artifact_finalizer_agent/src/mn_prototype_artifact_finalizer_agent/resources/: agent.json  input.spec.json  output.spec.json
prototype_bounded_tool_loop_agent/: README.md  SPEC.md  pyproject.toml
prototype_bounded_tool_loop_agent/src/mn_prototype_bounded_tool_loop_agent/: __init__.py
prototype_bounded_tool_loop_agent/src/mn_prototype_bounded_tool_loop_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
prototype_entity_queue_agent/: README.md  SPEC.md  pyproject.toml
prototype_entity_queue_agent/src/mn_prototype_entity_queue_agent/: __init__.py
prototype_entity_queue_agent/src/mn_prototype_entity_queue_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
prototype_entity_queue_agent/src/mn_prototype_entity_queue_agent/resources/: input.spec.json  output.spec.json
prototype_operation_router_agent/: README.md  SPEC.md  pyproject.toml
prototype_operation_router_agent/src/mn_prototype_operation_router_agent/: __init__.py
prototype_operation_router_agent/src/mn_prototype_operation_router_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
prototype_operation_router_agent/src/mn_prototype_operation_router_agent/resources/: output.spec.json
prototype_stateful_step_agent/: README.md  SPEC.md  pyproject.toml
prototype_stateful_step_agent/src/mn_prototype_stateful_step_agent/: __init__.py
prototype_stateful_step_agent/src/mn_prototype_stateful_step_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
prototype_stateful_step_agent/src/mn_prototype_stateful_step_agent/resources/: agent.json  output.spec.json
prototype_stream_processor_agent/: README.md  SPEC.md  pyproject.toml
prototype_stream_processor_agent/src/mn_prototype_stream_processor_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
prototype_stream_processor_agent/src/mn_prototype_stream_processor_agent/resources/: agent.json  output.spec.json
service_openshell_agent/: README.md  SPEC.md  pyproject.toml
service_openshell_agent/fixtures/: minimal.instance.json
service_openshell_agent/src/mn_service_openshell_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
service_openshell_agent/src/mn_service_openshell_agent/resources/: agent.json  input.spec.json
worker_llm_host_agent/: README.md  SPEC.md  pyproject.toml
worker_llm_host_agent/fixtures/: rendered.node.json
worker_llm_host_agent/src/mn_worker_llm_host_agent/: definition.py
worker_llm_host_agent/src/mn_worker_llm_host_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
worker_llm_host_agent/src/mn_worker_llm_host_agent/resources/: agent.json
worker_python_docker_agent/: README.md  SPEC.md  pyproject.toml
worker_python_docker_agent/fixtures/: minimal.instance.json  rendered.node.json
worker_python_docker_agent/src/mn_worker_python_docker_agent/: definition.py
worker_python_docker_agent/src/mn_worker_python_docker_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
worker_python_docker_agent/src/mn_worker_python_docker_agent/resources/: agent.json  output.spec.json
worker_python_host_agent/: README.md  SPEC.md  pyproject.toml
worker_python_host_agent/fixtures/: minimal.instance.json  rendered.node.json
worker_python_host_agent/src/mn_worker_python_host_agent/: __init__.py  definition.py
worker_python_host_agent/src/mn_worker_python_host_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+191 files in other folders)
