[project]
name = "mn-control-message-router-agent"
dynamic = ["version"]
description = "Message router agent package."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["mirrorneuron-python-sdk"]

[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = ".."
fallback_version = "0.0.0"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mn_control_message_router_agent = ["resources/*.json"]

[project.entry-points."mn.agents"]
"mn-agents.control.message_router" = "mn_control_message_router_agent:load_agent_definition"
