[project]
name = "mn-prototype-artifact-finalizer-agent"
dynamic = ["version"]
description = "Artifact composition and finalization factory."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["mirrorneuron-python-sdk"]

[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = ".."
fallback_version = "0.0.0"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mn_prototype_artifact_finalizer_agent = ["resources/*.json"]

[project.entry-points."mn.agents"]
"mn-agents.prototype.artifact_finalizer" = "mn_prototype_artifact_finalizer_agent:load_agent_definition"
