[project]
name = "mn-prototype-bounded-tool-loop-agent"
dynamic = ["version"]
description = "Bounded plan, action, observation loop factory."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["mirrorneuron-python-sdk"]

[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = ".."
fallback_version = "0.0.0"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mn_prototype_bounded_tool_loop_agent = ["resources/*.json"]

[project.entry-points."mn.agents"]
"mn-agents.prototype.bounded_tool_loop" = "mn_prototype_bounded_tool_loop_agent:load_agent_definition"
