[project]
name = "mn-prototype-entity-queue-agent"
dynamic = ["version"]
description = "Ordered entity queue handler factory."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["mirrorneuron-python-sdk"]

[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = ".."
fallback_version = "0.0.0"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mn_prototype_entity_queue_agent = ["resources/*.json"]

[project.entry-points."mn.agents"]
"mn-agents.prototype.entity_queue" = "mn_prototype_entity_queue_agent:load_agent_definition"
