[project]
name = "mn-prototype-operation-router-agent"
dynamic = ["version"]
description = "Reusable operation-selection handler factory."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["mirrorneuron-python-sdk"]

[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = ".."
fallback_version = "0.0.0"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mn_prototype_operation_router_agent = ["resources/*.json"]

[project.entry-points."mn.agents"]
"mn-agents.prototype.operation_router" = "mn_prototype_operation_router_agent:load_agent_definition"
