[project]
name = "mn-worker-python-docker-agent"
dynamic = ["version"]
description = "Python Docker worker agent package."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["mirrorneuron-python-sdk"]

[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = ".."
fallback_version = "0.0.0"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mn_worker_python_docker_agent = ["resources/*.json"]

[project.entry-points."mn.agents"]
"mn-agents.worker.python_docker" = "mn_worker_python_docker_agent:load_agent_definition"
